--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: movie-app
-        image: captainnoor1/multibranch-flask-app:latest
+        image: captainnoor1/multibranch-flask-app:build-3
         ports:
         - containerPort: 5000
